--- a/public/sample.html
+++ b/public/sample.html
@@ -5,13 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Screenshot Captured </title>
 </head>
 
 <body>
-    <div style="display:flex;justify-content:center;align-items:center;"">
-      <img src=" images/screenshot.png" id="screenshot" width="192" height="108" />
+  <p style="color:#8E78E1" >Captured Screenshot</p>
+    <div style="display:flex;justify-content:center;align-items:center;">
+      <img class="capturedScreenshot"  id="screenshot"  src="" width="192" height="108" />
     </div>
+    <script>
+
+       image = document.querySelector(".capturedScreenshot").src="./images/screenshot-1655806641937.png";
+      // image.src= "/images/screenshot-1655805964714.png";
+
+      
+    </script>
 </body>
 
 </html>
