--- a/public/multiscreenshots.html
+++ b/public/multiscreenshots.html
@@ -9,18 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-
     <title>screenshot</title>
 </head>
 
 <body>
     <p style="color:#8E78E1">Captured Screenshot</p>
     <div class="screenshots">
-        <img src="./images/screenshot-1.png" class="multiwindowss" height="100px" alt="">
-        <img src="./images/screenshot-2.png" class="multiwindowss" height="100px" alt="">
+        <img src="./images/screenshots/screenshot-1.png" class="multiwindowss" height="100px" alt="">
+        <img src="./images/screenshots/screenshot-2.png" class="multiwindowss" height="100px" alt="">
     </div>
 
 </body>
