--- a/public/screenshot.html
+++ b/public/screenshot.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <title>Screenshot Captured </title>
 </head>
@@ -14,7 +14,7 @@
 <body>
   <p style="color:#8E78E1" >Captured Screenshot</p>
     <div style="display:flex;justify-content:center;align-items:center;">
-      <img class="capturedScreenshot"  alt="image"  id="screenshot"  src="./images/screenshot-1.png" width="192" height="108" />
+      <img class="capturedScreenshot"  alt="image"  id="screenshot"  src="./images/screenshots/screenshot-1.png" width="192" height="108" />
       <!-- <img src=""  id="screenshot2"  width="192" height="108"   alt="image 2" > -->
     </div>
     <script>
