Fixes remaining build issues

--- a/public/screenshot.html
+++ b/public/screenshot.html
@@ -14,7 +14,7 @@
 <body>
   <p style="color:#8E78E1" >Captured Screenshot</p>
     <div style="display:flex;justify-content:center;align-items:center;">
-      <img class="capturedScreenshot"  alt="image"  id="screenshot"  src="./images/screenshots/screenshot-1.png" width="192" height="108" />
+      <img class="capturedScreenshot"  alt="image"  id="screenshot"  src="c:/images/screenshots/screenshot-1.png" width="192" height="108" />
       <!-- <img src=""  id="screenshot2"  width="192" height="108"   alt="image 2" > -->
     </div>
     <script>
