Fix build issues

--- a/public/multiscreenshots.html
+++ b/public/multiscreenshots.html
@@ -15,8 +15,8 @@
 <body>
     <p style="color:#8E78E1">Captured Screenshot</p>
     <div class="screenshots">
-        <img src="./images/screenshots/screenshot-1.png" class="multiwindowss" height="100px" alt="">
-        <img src="./images/screenshots/screenshot-2.png" class="multiwindowss" height="100px" alt="">
+        <img src="c:/images/screenshots/screenshot-1.png" class="multiwindowss" height="100px" alt="">
+        <img src="c:/images/screenshots/screenshot-2.png" class="multiwindowss" height="100px" alt="">
     </div>
 
 </body>
