--- a/public/download.html
+++ b/public/download.html
@@ -26,7 +26,7 @@
   <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
                 
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
-    <title>Thriveva</title>
+    <title>Klever</title>
 
     <style>
       .loader {
