--- a/public/idlepopup.html
+++ b/public/idlepopup.html
@@ -85,7 +85,7 @@
             opacity: 0.8;
         }
 
-        .button.yes {background-color: #4CAF50;}
+        .button.yes {background-color: #3971FF;}
         .button.no {background-color: #e7e7e7; color: black;}
     </style>
 
