bug/fix issue in desktop app

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ThriveVA Productivity Monitoring Tool" />
+    <meta name="description" content="Klever Productivity Monitoring Tool" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>ThriveVA</title>
+    <title>Klever</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
