--- a/public/splash.html
+++ b/public/splash.html
@@ -26,7 +26,7 @@
   <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
                 
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
-    <title>ThriveVA</title>
+    <title>Klever</title>
 
     <style>
       .loader {
@@ -59,7 +59,7 @@
       <div style="background-color: white; height: 400px; width: 400px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
         <img style="margin-bottom: 50px;"  alt="image"  id="screenshot"  src="./images/app-logo.png" width="142" />
         <div style="margin-bottom: 50px;" class="loader"></div>
-        <div>Loading ThriveVA Please wait...</div>
+        <div>Loading Klever Please wait...</div>
       </div>
     </div>
  
