update splash screen and desktop app logo for mac

--- a/public/splash.html
+++ b/public/splash.html
@@ -57,9 +57,9 @@
 
     <div style=" height: 100vh; width: 100vw; display: flex; align-items: center; justify-content: center;">
       <div style="background-color: white; height: 400px; width: 400px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
-        <img style="margin-bottom: 50px;"  alt="image"  id="screenshot"  src="./images/app-logo.png" width="142" />
+        <img style="margin-bottom: 50px;"  alt="image"  id="screenshot"  src="./images/app-new-logo.png" width="142" />
         <div style="margin-bottom: 50px;" class="loader"></div>
-        <div>Loading Klever Please wait...</div>
+        <div>Loading please wait...</div>
       </div>
     </div>
  
